<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jo爱读书</string>

    <string name="title_section1">图书馆</string>
    <string name="title_section2">书架</string>
    <string name="title_section3">关注的图书</string>
    <string name="title_section4">提醒</string>
    <string name="title_section5">关于</string>

    <!--navigation 模块-->
    <string name="navigation_drawer_open">打开导航</string>
    <string name="navigation_drawer_close">关闭导航</string>

    <!--注册模块-->
    <string name="et_signup_inputemail">请输入邮箱</string>
    <string name="btn_sigup_onekeyregistration">一键注册</string>
    <string name="tv_signup_signin">已有账号登录</string>
    <string name="tv_signup_byemail">使用Email注册</string>
    <string name="tv_signup_author">快捷登录</string>
    <string name="title_activity_signin">用户登录</string>
    <string name="et_sigin_user">输入用户邮箱</string>
    <string name="et_signin_pwd">密码</string>
    <string name="rb_sigin_pwdvisible">显示密码</string>
    <string name="btn_sigin_sigin">登录</string>
    <string name="tv_signin_forgotpwd">忘记密码？</string>
    <string name="tv_sigin_signup">或者，创建账户</string>
    <string name="et_signup_inputpwd">输入密码</string>

    <string name="btn_account_edit_save">保存</string>
    <string name="crop_save_text">保存</string>
    <string name="crop_discard_text">取消保存</string>





    <!--dialog text-->
    <string name="dialog_loading_text">正在加载信息……</string>
    <string name="dialog_loading_signin_text">正在登录……</string>
    <string name="dialog_loading_signup_text">正在注册……</string>
    <string name="dialog_loading_query">正在为为您努力查询……</string>
    <string name="dialog_loading_create">正在为为您努力创建一个图书馆……</string>
    <string name="dialog_title_pick">设置头像</string>
    <string name="dialog_title_library_pic">设置图书馆图片</string>
    <string name="dialog_select_from_gallery">从图库选择</string>
    <string name="dialog_select_from_camera">拍摄图片</string>
    <string name="dialog_image_chooser">选择图片</string>

    <!--toast text-->
    <string name="toast_signup_failed">注册失败</string>
    <string name="toast_signup_success">注册成功</string>
    <string name="toast_phone_input_error">手机号码输入错误</string>
    <string name="toast_email_input_error">邮箱输入错误</string>
    <string name="toast_signin_success">登录成功</string>
    <string name="toast_signin_failed">登录失败</string>
    <string name="toast_sdcard_unmount">请确认已经插入SD卡</string>
    <string name="toast_runningFaceDetection">Please wait\u2026</string>
    <string name="toast_wallpaper">Setting wallpaper\u2026</string>
    <string name="toast_savingImage">Saving picture\u2026</string>
    <string name="toast_library_name_empty">请为图书馆输入一个名称</string>
    <string name="toast_library_create_failed">创建失败</string>
    <string name="toast_library_create_successed">创建成功</string>
    <string name="toast_no_sign_in">没有登录，请先登录</string>
    <string name="toast_update_success">更新数据成功</string>
    <string name="toast_update_failed">更新数据失败</string>

    <!--图书信息模块-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_book_info_title">图书标题</string>
    <string name="tv_book_info_subtitle">图书小标题</string>
    <string name="tv_book_info_author">作者：</string>
    <string name="tv_book_info_translator">译者：</string>
    <string name="tv_book_info_pages">页数：</string>
    <string name="btn_book_info_borrow">借阅</string>
    <string name="tv_book_info_brief">简介</string>
    <string name="tv_book_info_catalog">目录</string>
    <string name="tv_book_info_author_brief">作者</string>

    <!--activity 标题-->
    <string name="title_activity_book_info">图书信息</string>
    <string name="title_activity_capture">二维码/条形码</string>
    <string name="title_activity_scanning_preferences">扫一扫设置</string>
    <string name="title_activity_capture_settings">扫一扫设置</string>
    <string name="title_activity_account_edit">账户信息编辑</string>
    <string name="title_activity_signup">创建用户</string>
    <string name="title_activity_book_detail">图书信息</string>
    <string name="title_activity_library_create">图书馆创建</string>
    <string name="title_activity_crop_image">剪裁</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_library">图书馆名称</string>
    <string name="title_fragment_library_list">我的图书馆</string>

    <!--扫一扫设置-->
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_auto_focus_title">使用自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">1D工业</string>
    <string name="preferences_decode_1D_product_title">1D产品</string>
    <string name="preferences_decode_Aztec_title">阿兹台克人</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_device_bug_workarounds_title">设备问题解决办法</string>
    <string name="preferences_disable_barcode_scene_mode_title">没有条形码的场景模式</string>
    <string name="preferences_disable_continuous_focus_summary">只使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">没有持续关注</string>
    <string name="preferences_disable_exposure_title">无曝光</string>
    <string name="preferences_disable_metering_title">无计量</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">待用</string>
    <string name="preferences_front_light_on">活跃</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_history_summary">存储在历史的扫描</string>
    <string name="preferences_history_title">加入历史</string>
    <string name="preferences_invert_scan_summary">黑色背景上的白色条形码扫描。在某些设备上。</string>
    <string name="preferences_invert_scan_title">反向扫描</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_orientation_title">没有自动旋转</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>

    <!--action text-->
    <string name="action_from_album">从相册选择一张图片</string>
    <string name="action_add_a_shortcut">将扫一扫添加到桌面</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_share">分享</string>
    <string name="action_search">搜索</string>
    <string name="action_feedback">反馈报告</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">设置</string>
    <string name="action_account_settings">账户设置</string>
    <string name="action_signout">退出登录</string>
    <string name="action_new">新建</string>
    <string name="action_display_style">显示样式</string>
    <string name="action_order_style">排序方式</string>
    <string name="action_save">保存</string>
    <string name="action_print">打印</string>

    <string name="tv_drawer_help_and_feedback">帮助与反馈</string>
    <string name="tv_library_collection">藏书量：</string>
    <string name="tv_library_create_type">类型：</string>
    <string name="tv_library_create_name">名称：</string>

    <string name="emptycardview_new_detail">创建或者删除你自己的图书馆，从此开启掌上管理图书。无论你是公司行政、还是个人</string>
    <string name="emptycardview_new">创建我的图书馆</string>

    <!--prompt-->
    <string name="prompt_upload_pic">上传图书馆照片</string>
    <string name="prompt_library_qrcode">图书馆二维码标识</string>

    <!--hint-->
    <string name="hint_nickname">昵称</string>
    <string name="tv_library_create_brief">简介：</string>
    <string name="hint_library_brief">在这里输入该图书馆的简介，让成员了解这个图书馆的相关信息</string>
    <string name="prompt_library_base">填写基本信息</string>
    <string name="hint_multiface_crop_help">Touch a face to begin.</string>

    <!--spinner-->
    <string name="spinner_item_public">企业图书馆</string>
    <string name="spinner_item_private">个人图书馆</string>
    <string name="btn_complete">完成</string>

    <!--onclick提示-->
    <string name="onclick_library_create">点击了创建图书馆</string>
    <string name="onclick_overflow">点击了更多选项</string>


    <string-array name="tabs_all_library">
        <item>  私馆  </item>
        <item>  公馆  </item>
    </string-array>

    <string-array name="pick_type">
        <item>拍摄图片</item>
        <item>从图库中选择图片</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">刷新</string>
    <string name="title_fragment_account_central">账户中心</string>
    <string name="title_fragment_account_edit">账户资料</string>
    <string name="action_account_edit">账户资料编辑</string>
    <string name="action_account_qrcode">用户二维码</string>
    <string name="app_intro">这个app的最初启发点是来源于公司行政的抱怨：（公司为了提高员工的职业能力规定
        每个月根据员工需求采购书籍以提供员工借阅）1、每次新购入书籍都需要对每本书进行编号记录；2、每个礼拜对所
        有书籍进行整理时都会发现少了几本书，核对借阅记录时还是发现少了好几本；3、原来员工老是会忘记登记借阅、
        归还书籍登记、归还期限、转借等原因导致管理公司书籍是个比较麻烦的事情</string>
    <string name="link_text_auto">如果你对帮忙解决行政的这个痛点有兴趣，愿意和我一起通过完成app来提高自己
        的Android熟悉程度，或者对我的这个idea感兴趣（当能解决公司图书管理只是完整idea中的很小一部分，
        我还有更加完善的想法，可以扩散到对每个人都很有用）；那么你可以联系我（电话号码：15625008626；Email：
        joyceit1991@gmail.com）,这个项目的代码将是以开源的形式完整公布，你也可以Fork项目代码
        https://github.com/Joyce1991/Jo.git。    </string>
    <string name="link_text_manual"><![CDATA[<b>还有，我最近正在寻求一份工作，如果你有好的工作机会也可以
        联系我</b><a href="tel:15625008626">电话号码</a>或者<a href="mailto:joyceit1991@gmail.com>发邮件</a>]]></string>

</resources>
