<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_action_scan"
        android:text="@string/action_scan"
        android:title="@string/action_scan"
        app:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:text="@string/action_new"
        android:title="@string/action_new"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:text="@string/action_search"
        android:title="@string/action_search"
        app:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_style"
        android:orderInCategory="100"
        android:title="@string/action_style"
        app:showAsAction="never" />
</menu>