<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jalen.jo.activities.SigninActivity$PlaceholderFragment">

    <!--定位中间部分-->
    <LinearLayout
        android:id="@+id/ll_sigin_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_signin_user"
            style="@style/JoComponentStyle"
            android:hint="@string/et_sigin_user"/>

        <EditText
            android:id="@+id/et_signin_pwd"
            style="@style/JoComponentStyle"
            android:hint="@string/et_signin_pwd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/rb_sigin_pwdvisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/rb_sigin_pwdvisible"/>
            </LinearLayout>

        <Button
            android:id="@+id/btn_sigin_sigin"
            style="@style/JoComponentStyle.Button"
            android:layout_marginTop="24dp"
            android:text="@string/btn_sigin_sigin"/>

        </LinearLayout>

    <!--产品logo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_sigin_center"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_sigin_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_launcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_size_logo"/>
        </LinearLayout>
    <!--overflow-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_sigin_center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"

        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_sigin_forgotpwd"
            style="@style/JoComponentStyle.TextView"
            android:text="@string/tv_signin_forgotpwd"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>
        <TextView
            android:id="@+id/tv_sigin_signup"
            style="@style/JoComponentStyle.TextView"
            android:text="@string/tv_sigin_signup"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>
        </RelativeLayout>
</RelativeLayout>
