<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jalen.jo.activities.SignupActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/et_signup_inputphone"
        style="@style/JoComponentStyle"
        android:hint="@string/et_signup_inputphone"/>
    <Button
        android:id="@+id/btn_sigup_onekeyregistration"
        style="@style/JoComponentStyle.Button"
        android:layout_below="@id/et_signup_inputphone"
        android:text="@string/btn_sigup_onekeyregistration"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sigup_onekeyregistration"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <TextView
            android:id="@+id/tv_signup_signin"
            style="@style/JoComponentStyle.TextView"
            android:layout_alignParentLeft="true"
            android:text="@string/tv_signup_signin"/>
        <TextView
            android:id="@+id/tv_signup_byemail"
            style="@style/JoComponentStyle.TextView"
            android:layout_alignParentRight="true"
            android:text="@string/tv_signup_byemail"/>
        </RelativeLayout>

    <!--第三方登录-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/br_l"/>
            <TextView
                style="@style/JoComponentStyle.TextView"
                android:text="@string/tv_signup_author"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/br_r"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ic_weibo"
                android:scaleType="centerInside"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ic_qq"
                android:scaleType="centerInside"/>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>
